# llmcli

./: Cargo.toml  LICENSE  PLAN.md  README.md
.claude/: settings.local.json
api-client/: Cargo.toml
cli/: Cargo.toml
cli/src/: config.rs  executor.rs  llm_client.rs  main.rs
cmd-server/: Cargo.toml
example/: config.yaml  index.md  license.md  prompt.txt  test.md  testing.md
mcp-server/: Cargo.toml
