[package]
name = "llmcli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"
eventsource-stream = "0.2"
futures = "0.3"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
